2002-01-19 garlick
    * Add alias capability in powerman.conf.

2002-01-17 garlick
    * Map plug names to node names on the fly at each subexpression
      interpretation instead of caching mappings in the Interp struct.
    * Major Changes to device specifications (old style no longer supported)
      - "all string" deprecated (use _ALL script variant)
      - various strings shortened
      - begin/end changed to C-style braces
      - query scripts are now named with _all suffixes ("all" semantics were
        previously assumed).
      - new, single-plug (non "all") query scripts added
      - second argument of 'map' can be "%s" to support single-plug query
    * Minor changes to config file (old style causes warnings but still parsed)
      - "tcpwrappers" takes an on|off argument
      - "client listener port" shortened to "port"
      - "begin_nodes", "end_nodes", "begin global", "end_global" statements
        deprecated
    * Support wti-rps10.
    * Added support for setting serial parameters, e.g. "9600,8n1"

2002-01-16 garlick
    * Add SERIAL_DEV device type
    * Begin support for wti-rps10 device (serial)

2002-01-13 garlick
    * Update icebox3 beacon script for B70 of the ice box firmware.

2002-12-30 garlick
    * More refinement of device error handling.
    * Strip out unused DBG_* flags and redundant DBG_SCRIPT printfs.

2002-12-27 garlick
    * Clean up passing of errors to client action completion callback.
    * Make all informational message names CP_INFO_*.  Delete some unused
      protocol responses.
    * Disable calling of err() function in hostlist.c.

2002-12-26 garlick
    * Beginnings of redundant power supply support.
    * Increase CP_LINEMAX to accomodate longer lines returned by --telemetry
    * Return powerman version in banner string and warn if version mismatch
      between server and client.
    * Add --exprange option to select one-line-per-node query responses
    * Added README

2002-12-25 garlick